# invoicer-app

./: .env.example  .gitignore  CLAUDE.md  IMAP_SETUP.md  OAUTH_SETUP_FIX.md  QUICKSTART.md  README.md  imap_main.py  pull_schema.sh  pyproject.toml  schema.sql
.claude/: settings.local.json
docs/: design.md  implementation-plan.md
modal/: scheduler.py  vllm_inference.py  worker.py
scripts/: test_s3.py
src/: cli.py
src/invoicer/: __init__.py  config.py  metrics.py  models.py  parser.py  pipeline.py  storage.py
src/invoicer/ingestion/: __init__.py  base.py  gmail.py
src/invoicer/processing/: __init__.py  email_parser.py
src/invoicer/semantic/: __init__.py  inference.py
src/invoicer/storage/: __init__.py  attachments.py  database.py
