[project]
name = "invoicer-app"
version = "0.1.0"
description = "AI-powered invoice extraction pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-auth>=2.43.0",
    "google-auth-httplib2>=0.2.1",
    "google-auth-oauthlib>=1.2.2",
    "psutil>=7.1.3",
    "pydantic>=2.12.4",
    "vllm>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/invoicer"]
