[project]
name = "invoicer-app"
version = "0.1.0"
description = "AI-powered invoice extraction pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.41.2",
    "google-auth>=2.43.0",
    "google-auth-httplib2>=0.2.1",
    "google-auth-oauthlib>=1.2.2",
    "modal>=1.2.4",
    "openai>=2.8.0",
    "psutil>=7.1.3",
    "psycopg>=3.2.13",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "vllm>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/invoicer"]
